# potential-octo-train

./: Cargo.toml  Directory Structure  Early Architecture Debate: How should the State Lattice actually store the world?  README.md  RFC-0002 – Spatial index shootout: Octree vs Merkle vs ?  RFC-0002: Lattice Storage Model – Choosing the Spatial Index for State Cells  RUST  rfc--0001-spatial-consensus.md
examples/: path_compression
